welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:11: error: ')' expected but ';' found.
setPos(biscuit; (orange+1)/2)
              ^RunHalf:11: error: ';' expected but ')' found.
setPos(biscuit; (orange+1)/2)
                            ^